wrap fix

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -87,6 +87,12 @@ p {
 	font-family: 'Open Sans', sans-serif;
 }
 
+.personas {
+	margin-top: 3rem;
+	margin-bottom: 3rem;
+}
+
+
 a {
 	font-family: 'Open Sans', sans-serif;
 }
